clusters/cl01tl/manifests/docs/Deployment-docs-cloudflared.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docs-cloudflared
  labels:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: docs
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: cloudflared
    app.kubernetes.io/version: 2026.10.0
    helm.sh/chart: cloudflared-4.6.0
  namespace: docs
spec:
  revisionHistoryLimit: 3
  replicas: 2
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/controller: main
      app.kubernetes.io/name: cloudflared
      app.kubernetes.io/instance: docs
  template:
    metadata:
      labels:
        app.kubernetes.io/controller: main
        app.kubernetes.io/instance: docs
        app.kubernetes.io/name: cloudflared
    spec:
      enableServiceLinks: false
      serviceAccountName: docs-cloudflared
      automountServiceAccountToken: false
      securityContext:
        runAsGroup: 65532
        runAsNonRoot: true
        runAsUser: 65532
        seccompProfile:
          type: RuntimeDefault
      hostIPC: false
      hostNetwork: false
      hostPID: false
      dnsPolicy: ClusterFirst
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app.kubernetes.io/name
                      operator: In
                      values:
                        - cloudflared
                topologyKey: kubernetes.io/hostname
              weight: 100
      containers:
        - args:
            - tunnel
            - --protocol
            - auto
            - --no-autoupdate
            - --metrics
            - 0.0.0.0:20241
            - run
            - --token
            - $(CF_MANAGED_TUNNEL_TOKEN)
          image: cloudflare/cloudflared:2026.10.0@sha256:9b49eed8f62806d5d45ddf59ecefb5710429598ea6d3fcccd2af938f621b2b07
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /ready
              port: 20241
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 1
          name: main
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /ready
              port: 20241
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 1
          resources:
            requests:
              cpu: 1m
              memory: 20Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
