clusters/cl01tl/manifests/docs/Deployment-docs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docs
  labels:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: docs
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: docs
    helm.sh/chart: docs-5.2.1
  namespace: docs
spec:
  revisionHistoryLimit: 3
  replicas: 3
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/controller: main
      app.kubernetes.io/name: docs
      app.kubernetes.io/instance: docs
  template:
    metadata:
      labels:
        app.kubernetes.io/controller: main
        app.kubernetes.io/instance: docs
        app.kubernetes.io/name: docs
    spec:
      enableServiceLinks: false
      serviceAccountName: docs
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
        seccompProfile:
          type: RuntimeDefault
      hostIPC: false
      hostNetwork: false
      hostPID: false
      dnsPolicy: ClusterFirst
      containers:
        - image: harbor.alexlebens.dev/images/docs:1.51.0@sha256:b9e17779e6de02aa7cb8c4ac0001ed12c1f3d5fad532a89cd152b69c979b9e63
          livenessProbe:
            httpGet:
              path: /
              port: 8000
          name: main
          readinessProbe:
            httpGet:
              path: /
              port: 8000
          resources:
            requests:
              cpu: 1m
              memory: 125Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: false
