clusters/cl01tl/manifests/docs/Service-docs-cloudflared.yaml
apiVersion: v1
kind: Service
metadata:
  name: docs-cloudflared
  labels:
    app.kubernetes.io/instance: docs
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: cloudflared
    app.kubernetes.io/service: docs-cloudflared
    app.kubernetes.io/version: 2026.9.3
    helm.sh/chart: cloudflared-4.5.6
  namespace: docs
spec:
  type: ClusterIP
  ports:
    - port: 20241
      targetPort: 20241
      protocol: TCP
      name: metrics
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: docs
    app.kubernetes.io/name: cloudflared
