clusters/cl01tl/manifests/docs/Service-docs.yaml
apiVersion: v1
kind: Service
metadata:
  name: docs
  labels:
    app.kubernetes.io/instance: docs
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: docs
    app.kubernetes.io/service: docs
    helm.sh/chart: docs-5.2.1
  namespace: docs
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: docs
    app.kubernetes.io/name: docs
