clusters/cl01tl/manifests/docs/HTTPRoute-docs.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: docs
  labels:
    app.kubernetes.io/instance: docs
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: docs
    helm.sh/chart: docs-5.2.1
  annotations:
    gethomepage.dev/description: Homelab Docs
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Knowledge
    gethomepage.dev/icon: https://web-assets.alexlebens.dev/logo/logo-blue.webp
    gethomepage.dev/name: Documentation
    gethomepage.dev/siteMonitor: http://docs.docs:80
    gethomepage.dev/statusStyle: dot
    gethomepage.dev/weight: "50"
  namespace: docs
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: "traefik"
  hostnames:
    - "docs.alexlebens.dev"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: docs
          namespace: docs
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
